# release-to-aws

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: labeler.yml  release-drafter.yml
.github/workflows/: build-ecr-artifacts.yml  labeler.yml  manual-deploy.yml  pr-checks.yml  release-drafter.yml  release.yml
src/release_to_aws/: __init__.py
tests/: conftest.py  test_release_to_aws.py
