[project]
name = "release-to-aws"
version = "0.1.0"
description = "How to version and release a FastAPI app to AWS"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi[standard]>=0.116.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.12.4",
    "fastapi-cli>=0.0.5",
    "pytest>=8.0.0",
    "pytest-cov>=6.2.1",
]


[tool.coverage.run]
relative_files = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


